[package]
name = "dummy_rollup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dummy_rollup"
path = "src/main.rs"

[dependencies]
celestia-rpc = "0.9.0"
celestia-types = "0.10.0"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.89"
hex = "0.4.3"
rand = "0.8.5"
chrono = "0.4"
ctrlc = "3.2"
chess = "3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
