[package]
name = "dummy_rollup"
version = "0.1.0"
edition = "2021"

[dependencies]
celestia-rpc = "0.9.1"
celestia-types = "0.10.1"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
hex = "0.4.3"
rand = "0.8.5"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
thiserror = "1.0"
async-trait = "0.1"
